2007-12-26  Luca Bruno  <lethalman88@gmail.com>

	Working on issue #22.
	
	* st/kernel/Console.st (setupHelp): added
	(helpString): added
	(run):

	* syx/syx-lexer.c (_syx_lexer_token_string): unlimited strings
	(_syx_lexer_token_symbol): unlimited symbols
	(_syx_lexer_token_identifier): unlimited identifiers

	Fix image snapshot inside scripts.

	* st/kernel/FileStream.st (nextPut): removed
	(nextPutAll): removed

	* st/kernel/SystemDictionary.st (startupSystem): save the startupProcess before fileing files

        * st/kernel/Console.st (nextLine): flush stdout

        * syx/syx-primitives.c (FileStream_fileOp): return stdin/stdout/stderr, use fwrite instead of fputs, read instead of fread and fgetc

2007-12-25  Luca Bruno  <lethalman88@gmail.com>

        Fix issue #25.
        
        * st/kernel/Compiler.st (runMultipleAndDeclarations): copy literal array because the primitive will modify it even it's constant

        * syx/syx-primitives.c (FileStream_fileOp): use fread instead of fgets

2007-12-24  Luca Bruno  <lethalman88@gmail.com>

        Changed FileStream behavior to handle FILE* instead of file descriptors

        * syx/syx-primitives.c (FileStream_fileOp):

        * st/kernel/FileStream.st:

2007-12-24  Rahul <blufox@gmail.com>
        * plugins/x11/plugin-init.c: updated the module prefix to X11

        * plugins/x11/x11gen.rb: updated module prefix to X11 and to remove

        XlibXlib structure

        * plugins/x11/Xlib.i: update with NeedWidePrototypes to compile in solaris

        * plugins/x11/st/XDisplay.st: added instead of XDisplay

        * plugins/x11/st/Xlib.st: updated with new module prefix X11 instead of

        Xlib and remove XlibXlib

        * plugins/x11/st/Display.st: removed

        * plugins/x11/st/XEvent.st: updated by subclassing X11XEvent

        * plugins/x11/SConscript: updated to install Xlib.st

        * plugins/x11/Xlib_wrap.c: updated with new classnames
