@@ -1,3 +1,13 @@
+2007-12-29  Luca Bruno  <lethalman88@gmail.com>
+
+	* syx/syx-init.c (syx_initialize_system): first send #initializeSystem: blocking then #startupSystem to ensure all things are initialized if the scheduler is not initialized in some embedded applications.
+
+	* st/kernel/SystemDictionary.st (initializeSystem:): added
+
+	Added makefiles for examples.
+	
+	* configure.ac: use SYX_OTHER_LIBS and SYX_OTHER_CFLAGS for libsyx
+
 2007-12-26  Luca Bruno  <lethalman88@gmail.com>
 
 	Working on issue #22.
